--- a/CSS/style.css
+++ b/CSS/style.css
@@ -318,6 +318,7 @@ h2.team-tittle{
   padding: 0px 0px 0px 0px;
   justify-content: space-between;
   margin-bottom: 94px;
+  background-color: #ffffff;
 }
 .team-icon-list{
   display: flex;
@@ -330,12 +331,21 @@ h2.team-tittle{
   height: 20px;
   margin-bottom: 40px;
   fill: #AFB1B8;
+  padding: 12px;
+  background-color: #ffffff;
 }
-.team-icon:hover{
+.team-icon:hover,
+.team-icon:focus{
   fill: #ffffff;
-  background-color: #2196f3
+  background-image: radial-gradient(circle at center,
+    #2196f3 60%,
+    #ffffff 60%
+  );
 }
-.client-container{
+.client-tittle{
+  margin-top: 94px;
+}
+.client{
   display: flex;
   justify-content: center;
   width: 170px;
@@ -343,8 +353,16 @@ h2.team-tittle{
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   }
-  
- 
+  .client:hover,
+  .client:focus{
+    border-color: #2196f3;
+    fill: #2196f3;
+  }
+    .client-icon:hover,
+    .client-icon:focus {
+      border-color: #2196f3;
+      fill: #2196f3;
+    }
 
 .client-tittle {
   margin-bottom: 30px;
@@ -466,7 +484,24 @@ main{
   }
 
 .footer-container{
+  margin-top: 72px;
   flex-direction: column;
+}
+.join-tittle{
+  font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+.join-tittle{
+  margin-bottom: 20px;
+}
+.footer-section{
+  margin-top: 72px;
+  margin-left: 70px;
 }
 .join-list{
   display: flex;
@@ -474,15 +509,21 @@ main{
 
 .join-link:not(:last-child) {
   margin-right: 10px;
-  
 }
 .join-icon{
   width: 20px;
   height: 20px;
   padding: 12px;
- fill: white;
- background-image: radial-gradient();
+ fill: #ffffff;
+    background-image: radial-gradient(circle at center,
+        rgba(255, 255, 255, 0.1) 60%,
+        #2F303A 60%);
   }
+ .join-icon:hover{
+  background-image: radial-gradient(circle at center,
+        #2196F3 60%,
+        #2F303A 60%);
+ } 
 
 
 .test-box{
